# messages

./: .gitignore  CHANGELOG.md  Makefile  Procfile  README.md  compose.yaml
.github/workflows/: crowdin_download.yml  crowdin_upload.yml  docker-publish.yml  messages-ghcr.yml  messages.yml
crowdin/: config.yml
docs/: architecture.md  email-exporter.md  env.md  frontend-threads-cache.md  model-custom-attributes.md  permissions.md  search-indexation.md  self-hosting.md  selfcheck.md  spam-config.md  tiered-storage.md  webhooks.md  worker.md
env.d/development/: backend.defaults  backend.e2e  frontend.defaults  frontend.e2e  mta-in-py.defaults  mta-in.defaults  mta-in.dist  mta-out.defaults
src/backend/: .dockerignore  .pylintrc  Dockerfile  pyproject.toml  worker.py
src/backend/core/: admin.py  apps.py  checks.py  enums.py  factories.py  forms.py  metrics.py  middlewares.py  models.py  signals.py  tasks.py  urls.py  utils.py
src/backend/core/ai/: ai_prompts.json  call_label.py  thread_classifier.py  thread_summarizer.py  utils.py
src/backend/core/api/: __init__.py  authentication.py  openapi.json  permissions.py  serializers.py  utils.py
src/backend/core/authentication/: backends.py  urls.py
src/backend/core/dns/: check.py  provisioning.py
src/backend/core/identity/: keycloak.py
src/backend/core/mda/: arc.py  autoreply.py  dispatch_webhooks.py  draft.py  inbound.py  inbound_auth.py  inbound_create.py  inbound_pipeline.py  inbound_tasks.py  inline_images.py  itip.py  outbound.py  outbound_direct.py  outbound_tasks.py  raw_mime.py  replies.py  selfcheck.py  selfcheck_reporting.py  signing.py  smtp.py  spam.py  tasks.py  utils.py  webhook_payload.py
src/backend/core/migrations/: 0014_blob_encryption_key_id_blob_storage_location_and_more.py  0014_threadaccess_origin.py  0015_message_mime_id_index.py  0016_maildomain_identity_group_metadata_and_more.py  0017_remove_thread_count_draft_and_more.py  0018_alter_label_options_alter_message_subject_and_more.py  0024_channel_encrypted_settings_scope_level.py  0025_alter_threadevent_type_userevent.py  0026_blob_encryption_key_id_blob_storage_location_and_more.py  0026_userevent_usrevt_user_thread_assign_uniq.py  0027_blob_encryption_key_id_blob_storage_location_and_more.py  0028_split_attachment_messages.py  0029_attachment_message_not_null.py  0030_remove_attachment__deprecated_messages_and_more.py  0031_message_mime_id_index.py  0032_inboundmessage_blob_envelope.py
src/backend/core/search/: __init__.py  index.py  search.py
src/backend/core/services/: ai_service.py  blob_gc.py  import_service.py  ssrf.py  thread_events.py  throttle.py  tiered_storage.py  tiered_storage_tasks.py
src/backend/core/tests/: conftest.py  test_admin_inbound_reprocess.py  test_admin_replay_abandoned.py  test_checks.py  test_itip.py  test_signals.py  test_tasks.py  test_utils.py  test_worker.py
src/backend/messages/: celery_app.py  settings.py  urls.py  wsgi.py
src/e2e/: Dockerfile  README.md  compose.yaml  package-lock.json  package.json  playwright.config.ts
src/e2e/caddy/: Caddyfile
src/e2e/nginx/: e2e.conf.template  entrypoint.sh
src/e2e/src/: utils-test.ts  utils.ts
src/e2e/src/__tests__/: attachment-preview.spec.ts  link-preview.spec.ts  login.spec.ts  mailbox-settings.spec.ts  message-import.spec.ts  message-inline-image.spec.ts  message-send.spec.ts  outbox.spec.ts  signatures.spec.ts  thread-event.spec.ts  thread-starred-read.spec.ts
src/frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  cunningham.ts  eslint.config.mjs  i18next.config.ts  index.html  instrumentation-client.ts  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
src/frontend/caddy/: Caddyfile
src/frontend/nginx/: nginx.conf.template
src/frontend/public/: browserconfig.xml  manifest.json
src/frontend/public/images/: generate-ios-icons.sh
src/frontend/scripts/: print-bundle-stats.mjs
src/frontend/src/: bootstrap.tsx  main.tsx  vite-env.d.ts
src/jmap-email/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
src/jmap-email/examples/: compose_with_attachment.py  encoded_word_subject.py  import_eml_safely.py  inline_image_roundtrip.py  parse_and_print.py
src/jmap-email/jmap_email/: __init__.py  composer.py  helpers.py  limits.py  parser.py  types.py
src/jmap-email/tests/: test_address_fuzz.py  test_composer.py  test_composer_fuzz.py  test_helpers.py  test_limits.py  test_message_fuzz.py  test_parser.py  test_parser_structure.py
src/keycloak/: Dockerfile  Procfile  realm.json
src/keycloak/buildpack/: scalingo_postcompile.sh
src/keycloak/bulk-role-membership/: README.md  pom.xml
src/keycloak/scripts/: scalingo_postcompile.sh
src/keycloak/tests/: test_bulk_role_membership.py
src/mpa/: README.md
src/mpa/tests/: conftest.py  test_rspamd_api.py
src/mta-in/: Dockerfile  Dockerfile.pymta  README.md  compose.yaml  entrypoint.pymta.sh  entrypoint.sh  pyproject.toml
src/mta-in/etc/: main.cf
src/mta-in/postfix/: Dockerfile  entrypoint.sh  requirements.txt
src/mta-in/src/: delivery_milter.py
src/mta-in/tests/: conftest.py  test_address.py  test_email_delivery.py  test_handler.py  test_limits.py  test_mda_async.py  test_metrics.py  test_security.py  test_smtp_protocol.py
src/mta-out/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/mta-out/etc/: main.cf.j2
src/mta-out/tests/: conftest.py  test_attachments.py  test_email_sending.py  test_message_integrity.py  test_smtp_auth.py
src/nginx/: servers.conf.erb
src/socks-proxy/: Dockerfile  README.md  entrypoint.sh
src/socks-proxy/tests/: conftest.py  test_smtp.py  test_socks_proxy.py
src/widgets/: build.js  index.html  package-lock.json  package.json
src/widgets/demo/: feedback.html
(+695 files in other folders)
